day04/workshop4-practice/base/minio-sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minions
  labels:
    app: minio
    name: minio-sts
spec:
  selector:
    matchLabels:
      app: minio
      name: minio-po
  replicas: 3
  template:
    metadata:
      name: minio
      labels:
        app: minio
        name: minio-po
    spec:
      containers:
      - name: minio-container
        image: bitnami/minio:latest
        imagePullPolicy: IfNotPresent
        env: # enviroment variables, conver to secrets
          - name: MINIO_ROOT_USER
            value: "user"
          - name: MINIO_ROOT_PASSWORD
            value: "password"
        command: ## exec
          - "minio"
          - "server"
          - "--address=:9000"
          - "--console-address=:9090"
          - minio-sts={0...2}.minio-hsvc.minio.svc.cluster.local/data # "http://node{1...4}.146.190.195.145.nip.io/data"
        ports:
        - name: console-port
          containerPort: 9090
        - name: server-port
          containerPort: 9000
        livenessProbe:
          httpGet:
            path: minio/health/live #minio/health/health
            port: server-port
          periodSeconds: 30
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: 200m
            memory: 250Mi
          limits:
            cpu: 200m
            memory: 250Mi
## Add Volume Mount 
## Configure init container -> Set up for the main container
