day04/workshop4-practice/base/minio-headless-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minions
  labels:
    app: minio
    name: minio-hsvc
spec:
  clusterIP: None
  ports:
    - name: hsvc-sever-port
      port: 9000
      targetPort: server-port
    - name: hsvc-console-port
      port: 9090
      targetPort: console-port
  selector:
    app: minio
    name: minio-po
