day04/workshop4-practice/base/minio-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minions
  labels:
    app: minio
    name: minio-svc
spec:
  type: ClusterIP
  selector:
    app: minion
    name: minio-po
  ports:
  - name: svc-console-port
    port: 9090
    targetPort: console-port
  - name: svc-server-port
    port: 9000
    targetPort: server-port
