day04/workshop4-practice/base/minio-ingress.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: minio-ing
  namespace: minions
  labels:
    app: minio
    name: minio-ing
spec:
  ingressClassName: nginx
  rules:
  - host: data-146.190.195.145.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port:
              number: 9000
  - host: console-146.190.195.145.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-svc
            port:
              number: 9090
